Timer box div with fixed size to stop border jumping when timer updates

--- a/src/components/timer/timer.scss
+++ b/src/components/timer/timer.scss
@@ -7,7 +7,13 @@ timer {
     margin-left: 48px;
   }
   .timer-counter {
-    margin-left: 68px;
+    margin-left: 58px;
     font-weight: 600;
+    width: 91px;
+    height: 35px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-top: 5px;
+    line-height: 35px;
   }
 }
